# comfyui-touch-connect

./: .comfyignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  __init__.py  justfile  package-lock.json  package.json  pyproject.toml  release-please-config.json  vitest.config.js
.github/workflows/: ci.yml  registry-health.yml
docs/blueprint/adrs/: 0001-adopt-typescript-bun-build.md  0002-adopt-kit-pointer-claim-protocol.md
screenshots/: Dockerfile  README.md  capture.mjs  package.json  workflow.json
src/: index.ts
tests/: test_publish_hygiene.py
tests/js/: touch-connect.test.js
web/js/: touch-connect.js
