[project]
name = "comfyui-touch-connect"
description = "Magnifier loupe under your finger for accurate node-connection dragging on touch devices."
version = "0.1.12"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Lauri Gates" }]
keywords = ["comfyui", "comfyui-nodes", "ui", "picker", "mobile", "touch"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: JavaScript",
    "Topic :: Multimedia :: Graphics",
]

# Floor tied to the LGraphCanvas connection-drag APIs this pack reads:
# the `connecting_links` drag-state signal and DragAndScale (`ds.offset`/`ds.scale`)
# graph→client projection. Frontend-only pack — no runtime Python deps.
dependencies = [
    "comfyui-frontend-package>=1.40.0",
]

[project.urls]
Repository = "https://github.com/laurigates/comfyui-touch-connect"
Issues = "https://github.com/laurigates/comfyui-touch-connect/issues"

[dependency-groups]
dev = [
    "ruff>=0.11",
    "pytest>=8",
    "pre-commit>=4",
    "pathspec>=1.1.1",
]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.comfy]
PublisherId = "laurigates"
DisplayName = "Touch Connect"
Icon = "https://raw.githubusercontent.com/laurigates/comfyui-touch-connect/main/icon.png"
Banner = "https://raw.githubusercontent.com/laurigates/comfyui-touch-connect/main/banner.png"
# The built frontend (web/dist/) is git-ignored — emitted by `bun run
# build`. publish-node-action honors [tool.comfy] includes to force-add
# otherwise-ignored paths into the published tarball. See ADR-0001.
includes = ["web/dist"]
